<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.iosharp.android.ssplayer.fragment.AboutFragment">

    <TextView
        android:id="@+id/about_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/app_name"
        style="@style/TextAppearance.AppCompat.Title"/>

    <TextView
        android:id="@+id/about_app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/about_app_name"
        android:layout_toRightOf="@+id/about_app_name"
        android:text="@string/about_version"
        style="@style/TextAppearance.AppCompat.Caption"/>

    <TextView
        android:id="@+id/about_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/about_app_version"
        android:text="@string/about_body"
        style="@style/TextAppearance.AppCompat.Body1"/>

    <Button
        android:visibility="gone"
        android:layout_alignParentBottom="true"
        android:id="@+id/disable_debug"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_disable_debug"
        />

</RelativeLayout>
