<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:paddingLeft="8dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/event_header_row_title"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/event_header_row_channel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="15dp"
            android:text="@string/event_header_row_channel"
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textAllCaps="true"/>

        <TextView
            android:id="@+id/event_header_row_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="15dp"
            android:text="@string/event_header_row_time"
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textAllCaps="true"/>

        <TextView
            android:id="@+id/event_header_row_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"
            android:text="@string/event_header_row_name"
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textAllCaps="true"/>

        </LinearLayout>
</LinearLayout>